--- a/.gitattributes
+++ b/.gitattributes
@@ -22,7 +22,9 @@ WebContent/resources/d3.v4.min.js -text
 WebContent/resources/style.css -text
 WebContent/taxonomy/node.jsp -text
 WebContent/taxonomy/node_delete.jsp -text
+WebContent/taxonomy/node_edit.jsp -text
 WebContent/taxonomy/node_submit.jsp -text
 WebContent/taxonomy/taxonomy.jsp -text
+WebContent/taxonomy/taxonomy_edit.jsp -text
 non-packaged-resources/schema.sql -text
 /pom.xml -text
