--- a/pom.xml
+++ b/pom.xml
@@ -61,31 +61,6 @@
             <artifactId>jstl</artifactId>
             <version>1.1.2</version>
         </dependency>
-        <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.15</version>
-        <scope>compile</scope>
- <exclusions>
-    <exclusion>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
-    </exclusion>
-    <exclusion>
-      <groupId>javax.jms</groupId>
-      <artifactId>jms</artifactId>
-    </exclusion>
-    <exclusion>
-      <groupId>com.sun.jdmk</groupId>
-      <artifactId>jmxtools</artifactId>
-    </exclusion>
-    <exclusion>
-      <groupId>com.sun.jmx</groupId>
-      <artifactId>jmxri</artifactId>
-    </exclusion>
-  </exclusions>
-
-    </dependency>
 
         <dependency>
             <groupId>edu.uiowa.icts.taglib</groupId>
@@ -101,6 +76,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.3-1102-jdbc4</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.apache.logging.log4j</groupId>
+        	<artifactId>log4j-api</artifactId>
+        	<version>2.5</version>
         </dependency>
   </dependencies>
 </project>
